[package]
name = "terrars-fly-apps-fly"
edition = "2021"
version = "0.1.0"
description = "Pre-generated Terrars Fly bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-fly-apps-fly"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.0.9"

[features]
app = []
cert = []
data_app = []
data_cert = []
data_ip = []
ip = []
machine = []
volume = []
